--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ sysinfo.txt
 crashlytics-build.properties
 
 Assets/3rd Party Assets/MagicArsenal/Upgrades/Magic Arsenal URP Upgrade (Legacy Shaders).unitypackage.meta
+Assets/3rd Party Assets/MagicArsenal/Upgrades/Magic Arsenal Standard (Legacy Shaders).unitypackage.meta
+Assets/3rd Party Assets/MagicArsenal/Upgrades/Magic Arsenal URP Upgrade.unitypackage.meta
