--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ crashlytics-build.properties
 Assets/3rd Party Assets/MagicArsenal/Upgrades/Magic Arsenal URP Upgrade (Legacy Shaders).unitypackage.meta
 Assets/3rd Party Assets/MagicArsenal/Upgrades/Magic Arsenal Standard (Legacy Shaders).unitypackage.meta
 Assets/3rd Party Assets/MagicArsenal/Upgrades/Magic Arsenal URP Upgrade.unitypackage.meta
+UserSettings/Layouts/default-2021.dwlt
